# next-code

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  JCODE_DCP_PLAN.md  LICENSE  MASTER_UI.md  OAUTH.md  PARITY.md  PLAN_MCP_SKILLS.md  PLAN_PARITY.md  README.md  RELEASING.md  RULES.md  TELEMETRY.md  cursor_1_next_code_ui_migration.md  cursor_code_1.md  cursor_code_2.md  cursor_gajae_code_pr_investigation.md  cursor_next_code_ui_migration.md  discovered_ui_features.txt  entities.json  flake.nix  head  mempalace.json  rust-toolchain.toml  rustc-ice-2026-07-09T15_16_28-9733.txt
crates/jcode-agent-runtime/: Cargo.toml
crates/jcode-agent-runtime/src/: definition.rs  lib.rs  output.rs  permission.rs  reasoning.rs  registry.rs  signals.rs
crates/jcode-agent-runtime/tests/: sample_agents.rs
crates/jcode-beads-bridge/: Cargo.toml
crates/jcode-beads-bridge/src/: lib.rs  mapping.rs  project.rs  tasks.rs  tests.rs
crates/jcode-llm-core/: Cargo.toml
crates/jcode-llm-core/src/: auth.rs  lib.rs  route.rs  schema.rs
crates/jcode-llm-providers/: Cargo.toml
crates/jcode-memory-types/: Cargo.toml
crates/jcode-memory-types/src/: extraction.rs  extraction_prompts.rs  lib.rs  provider.rs
crates/jcode-mempalace-adapter/: Cargo.toml  README.md
crates/jcode-mempalace-adapter/src/: convert.rs  coordination.rs  lib.rs  migrate.rs
crates/jcode-plugin-core/: Cargo.toml
crates/jcode-plugin-core/src/: config.rs  events.rs  lib.rs  manager.rs  manifest.rs  preflight.rs  security.rs  tests.rs  types.rs
crates/jcode-provider-app/: Cargo.toml
crates/jcode-provider-app/src/: catalog.rs  credential.rs  integration.rs  lib.rs
crates/jcode-provider-claude-cli-runtime/: Cargo.toml
crates/jcode-provider-service/: Cargo.toml  README.md
crates/jcode-provider-service/src/: aliases.rs  boot.rs  callback_server.rs  catalog.rs  defaults.rs  expiry.rs  failover.rs  hooks.rs  integration.rs  inventory.rs  lib.rs  metadata_profiles.rs  migrate.rs  model_prefs.rs  policy.rs  registry.rs  retry_after.rs  route_provider.rs  runtime.rs  scrub.rs  service.rs  tui_picker.rs
crates/jcode-provider-service/tests/: integration.rs
crates/jcode-secrets/: Cargo.toml
crates/jcode-secrets/src/: lib.rs  local.rs  resolver.rs
crates/jcode-swarm-core/: Cargo.toml
crates/jcode-swarm-core/src/: lib.rs
crates/next-code-agent-runtime/: Cargo.toml
crates/next-code-agent-runtime/src/: definition.rs  permission.rs  registry.rs  tier.rs
crates/next-code-agent-runtime/tests/: sample_agents.rs
crates/next-code-app-core/: Cargo.toml
crates/next-code-app-core/src/: agent.rs  agent_tests.rs  ambient.rs  ambient_tests.rs  build.rs  catchup.rs  channel.rs  dcg_bridge.rs  dcp_bridge.rs  dcp_plugin.rs  execution_policy.rs  export.rs  external_auth.rs  lib.rs  mission.rs  network_retry.rs  notifications.rs  overnight.rs  perf.rs  prompt_placeholders.rs  prompt_templates.rs  replay.rs  restart_snapshot.rs  restart_snapshot_tests.rs  rtco_filter.rs  sandbox.rs  scoped_models.rs  server.rs  server_spawn.rs  session_active_pids.rs  session_launch.rs  session_rebuild.rs  setup_hints.rs  ssh_remote.rs  startup_profile.rs  telemetry_state.rs  telemetry_tests.rs  turn_cancel_registry.rs  update.rs  usage_tests.rs  (+1 more)
crates/next-code-base/: Cargo.toml
crates/next-code-base/benches/: todo_bench.rs
crates/next-code-base/src/: background.rs  browser.rs  browser_tests.rs  bus.rs  cache_tracker.rs  client_input.rs  compaction.rs  config.rs  config_tests.rs  copilot_usage.rs  dictation.rs  dictation_tests.rs  disable.rs  embedding.rs  embedding_backend.rs  env.rs  gateway.rs  generated_image.rs  gmail.rs  goal.rs  goal_tests.rs  hooks.rs  id.rs  import.rs  import_tests.rs  lib.rs  live_tests.rs  logging.rs  login_qr.rs  memory.rs  memory_agent.rs  memory_agent_tests.rs  memory_log.rs  memory_tests.rs  memory_types.rs  message.rs  model_pricing.rs  model_pricing.rs.check  notepad.rs  plan.rs  (+36 more)
crates/next-code-base/tests/: claude_import_integration.rs  launch_hotkeys_roundtrip.rs
crates/next-code-best-of-n/: Cargo.toml
crates/next-code-best-of-n/src/: config.rs  lib.rs  selector.rs  store.rs  strategies.rs  types.rs  ui.rs
crates/next-code-build-meta/: Cargo.toml  build.rs
crates/next-code-build-meta/src/: age.rs  changelog.rs  lib.rs
crates/next-code-build-support/: Cargo.toml
crates/next-code-build-support/examples/: write_dev_sidecar.rs
crates/next-code-build-support/src/: lib.rs  paths.rs  platform_support.rs  storage_helpers.rs  tests.rs
crates/next-code-core/: Cargo.toml
crates/next-code-core/src/: env.rs  id.rs  util.rs
crates/next-code-desktop/: AGENTS.md  Cargo.toml  build.rs
crates/next-code-desktop/src/: animation.rs  canvas.rs  desktop_app_driver.rs  desktop_benchmark.rs  desktop_benchmarks_scroll.rs  desktop_benchmarks_transcript.rs  desktop_branding.rs  desktop_capture.rs  desktop_clipboard.rs  desktop_config.rs  desktop_events_glue.rs  desktop_gallery.rs  desktop_issue_cache.rs  desktop_jobs.rs  desktop_log.rs  desktop_prefs.rs  desktop_profiling.rs  desktop_reload.rs  desktop_session_events.rs  desktop_tasks.rs  desktop_worker_process.rs  hero_mask.rs  main.rs  main_tests.rs  power_inhibit.rs  session_data.rs  session_launch.rs  single_session.rs  state_space_tests.rs  state_space_tests.rs.check  workspace.rs  workspace_tests.rs
crates/next-code-grok-render/: Cargo.toml
crates/next-code-grok-render/src/: appearance.rs  clipboard.rs  gboom.rs  glyphs.rs  host.rs  lib.rs  link_opener.rs  modal_window_state.rs  prompt_images.rs  render.rs  syntax.rs  terminal.rs  theme.rs  util.rs
crates/next-code-hooks/: Cargo.toml
crates/next-code-hooks/src/: cli.rs  config.rs  dispatch.rs  execute.rs  lib.rs  matcher.rs  registry.rs  tests.rs  types.rs
crates/next-code-keyring-store/: Cargo.toml
crates/next-code-keywords/: Cargo.toml
crates/next-code-keywords/src/: intent.rs  (+9 more)
crates/next-code-llm-dialects/: Cargo.toml
crates/next-code-llm-vcr/: Cargo.toml
crates/next-code-logging/: Cargo.toml
crates/next-code-plugin-core/: Cargo.toml
crates/next-code-plugin-runtime/: Cargo.toml
(+4082 files in other folders)
