[package]
name = "next-code"
version = "0.32.0"
description = "Possibly the greatest coding agent ever built — blazing-fast TUI, multi-model, swarm coordination, 30+ tools"
edition = "2024"
autobins = false

[workspace.package]
edition = "2024"

[workspace]
members = [
    ".",
    "crates/next-code-agent-runtime",
    "crates/next-code-experiment-flags",
    "crates/next-code-app-core",
    "crates/next-code-base",
    "crates/next-code-tui",
    "crates/next-code-build-meta",
    "crates/next-code-ambient-types",
    "crates/next-code-auth-types",
    "crates/next-code-embedding",
    "crates/next-code-gateway-types",
    "crates/next-code-pdf",
    "crates/next-code-logging",
    "crates/next-code-background-types",
    "crates/next-code-batch-types",
    "crates/next-code-build-support",
    "crates/next-code-compaction-core",
    "crates/next-code-config-types",
    "crates/next-code-core",
    "crates/next-code-fuzzy",
    "crates/next-code-memory-types",
    "crates/next-code-message-types",
    "crates/next-code-overnight-core",
    "crates/next-code-plan",
    "crates/next-code-productivity-core",
    "crates/next-code-swarm-core",
    "crates/next-code-protocol",
    "crates/next-code-selfdev-types",
    "crates/next-code-session-types",
    "crates/next-code-setup-hints",
    "crates/next-code-storage",
    "crates/next-code-side-panel-types",
    "crates/next-code-azure-auth",
    "crates/next-code-notify-email",
    "crates/next-code-provider-metadata",
    "crates/next-code-provider-env",
    "crates/next-code-provider-core",
    "crates/next-code-provider-bedrock",
    "crates/next-code-provider-anthropic",
    "crates/next-code-provider-antigravity",
    "crates/next-code-provider-copilot",
    "crates/next-code-provider-openrouter",
    "crates/next-code-provider-openai",
    "crates/next-code-provider-gemini",
    "crates/next-code-provider-service",
    "crates/next-code-provider-claude-cli-runtime",
    "crates/next-code-provider-anthropic-runtime",
    "crates/next-code-provider-antigravity-runtime",
    "crates/next-code-provider-copilot-runtime",
    "crates/next-code-provider-cursor-runtime",
    "crates/next-code-provider-gemini-runtime",
    "crates/next-code-provider-openai-runtime",
    "crates/next-code-provider-openrouter-runtime",
    "crates/next-code-llm-core",
    "crates/next-code-llm-protocols",
    "crates/next-code-llm-dialects",
    "crates/next-code-llm-providers",
    "crates/next-code-llm-vcr",
    "crates/next-code-tui-markdown",
    "crates/next-code-tui-messages",
    "crates/next-code-usage-types",
    "crates/next-code-tui-core",
    "crates/next-code-tui-mermaid",
    "crates/next-code-task-types",
    "crates/next-code-tool-core",
    "crates/next-code-tool-types",
    "crates/next-code-tui-account-picker",
    "crates/next-code-tui-anim",
    "crates/next-code-tui-render",
    "crates/next-code-tui-visual-debug",
    "crates/next-code-tui-session-picker",
    "crates/next-code-tui-style",
    "crates/next-code-tui-permissions",
    "crates/next-code-tui-tool-display",
    "crates/next-code-tui-usage-overlay",
    "crates/next-code-update-core",
    "crates/next-code-terminal-launch",
    "crates/next-code-terminal-image",
    "crates/next-code-tui-workspace",
    "crates/next-code-best-of-n",
    "crates/next-code-hooks",
    "crates/next-code-keyring-store",
    "crates/next-code-redact",
    "crates/next-code-keywords",
    "crates/next-code-secrets",
    "crates/next-code-provider-doctor",
    "crates/next-code-render-core",
    "crates/next-code-ratatui-inline",
    "crates/next-code-ratatui-textarea",
    "crates/xai-tty-utils",
    "crates/xai-grok-paths",
    "crates/xai-grok-markdown-core",
    "crates/xai-grok-markdown",
    "crates/xai-grok-config",
    "crates/xai-grok-telemetry",
    "crates/xai-grok-workspace",
    "crates/xai-grok-tools",
    "crates/xai-grok-shared",
    "crates/xai-grok-pager-render",
    "crates/xai-acp-lib",
    "crates/xai-grok-agent",
    "crates/xai-grok-shell",
    "crates/xai-grok-announcements",
    "crates/xai-grok-voice",
    "crates/xai-file-utils",
    "crates/xai-grok-version",
    "crates/xai-prompt-queue",
    "crates/xai-token-estimation",
    "crates/xai-hooks-plugins-types",
    "crates/xai-crash-handler",
    "crates/xai-grok-mermaid",
    "crates/xai-grok-sandbox",
    "crates/xai-grok-plugin-marketplace",
    "crates/xai-grok-update",
    "crates/xai-fast-worktree",
    "crates/xai-grok-pager",
    "third_party/ordered_hashmap",
    "third_party/graphlib_rust",
    "third_party/dagre_rust",
    "third_party/mermaid-to-svg",
    "evals/jbench",
    "evals/next-code-edit-bench",

]

# Pin fast_file_search (FFS) to latest main tip (package 0.1.15 / a0bda22).
# Note: tags v0.9.x diverged from main — this fork tracks main, not those tags.
# Bump rev when new FFS lands on main.
[workspace.dependencies]
ffs-search = { git = "https://github.com/quangdang46/fast_file_search", rev = "a0bda22d16cff8637d162a700dc8f1cbd41d957b" }
ffs-engine = { git = "https://github.com/quangdang46/fast_file_search", rev = "a0bda22d16cff8637d162a700dc8f1cbd41d957b" }
ffs-symbol = { git = "https://github.com/quangdang46/fast_file_search", rev = "a0bda22d16cff8637d162a700dc8f1cbd41d957b" }
# Pin hashline to latest v0.8.6 (UTF-8-safe truncation + INS N: shorthand).
hashline = { git = "https://github.com/quangdang46/hashline.git", rev = "d0f836789" }
strum = { version = "0.26", features = ["derive"] }
regex = "1"

[lib]
name = "next_code"
path = "src/lib.rs"

[[bin]]
name = "next-code"
path = "src/main.rs"

[[bin]]
name = "nextcode"
path = "src/main.rs"

[[bin]]
name = "test_api"
path = "src/bin/test_api.rs"

[[bin]]
name = "next-code-harness"
path = "src/bin/harness.rs"

[[bin]]
name = "session_memory_bench"
path = "src/bin/session_memory_bench.rs"
required-features = ["dev-bins"]

[[bin]]
name = "memory_recall_bench"
path = "src/bin/memory_recall_bench.rs"
required-features = ["dev-bins"]

[[bin]]
name = "mermaid_side_panel_probe"
path = "src/bin/mermaid_side_panel_probe.rs"
required-features = ["dev-bins"]

[[bin]]
name = "tui_bench"
path = "src/bin/tui_bench.rs"
required-features = ["dev-bins"]

[dependencies]
# Hook system for lifecycle events
next-code-hooks = { path = "crates/next-code-hooks" }
next-code-keyring-store = { path = "crates/next-code-keyring-store" }
next-code-provider-doctor = { path = "crates/next-code-provider-doctor" }
next-code-provider-anthropic-runtime = { path = "crates/next-code-provider-anthropic-runtime" }
next-code-provider-antigravity-runtime = { path = "crates/next-code-provider-antigravity-runtime" }
next-code-provider-claude-cli-runtime = { path = "crates/next-code-provider-claude-cli-runtime" }
next-code-provider-copilot-runtime = { path = "crates/next-code-provider-copilot-runtime" }
next-code-provider-cursor-runtime = { path = "crates/next-code-provider-cursor-runtime" }
next-code-provider-gemini-runtime = { path = "crates/next-code-provider-gemini-runtime" }
next-code-provider-openai-runtime = { path = "crates/next-code-provider-openai-runtime" }
next-code-provider-openrouter-runtime = { path = "crates/next-code-provider-openrouter-runtime" }
next-code-provider-service = { path = "crates/next-code-provider-service" }


# TOON format output for the `next-code run --toon` flag — token-efficient JSON
# alternative. Pinned to a specific commit SHA so the dependency is reproducible.
toon = { git = "https://github.com/Dicklesworthstone/toon_rust", package = "tru", rev = "b94f69d" }

# File picker for `@<path>` autocomplete in the TUI input.
# Provides a long-lived FilePicker with background scan, gitignore-aware walk,
# fuzzy matching with typo resistance, and frecency-ranked results.
# The path override under [workspace.dependencies] above redirects this
# to the local fast_file_search checkout so we exercise the
# @-mention system (Phases A/B/C/D) before ffs-search 0.2.0 is on crates.io.
ffs-search.workspace = true
ffs-engine.workspace = true

# Async runtime
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "charset", "http2", "system-proxy", "rustls-tls", "rustls-tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Permission modes (Plan / AcceptEdits / BypassPermissions / DontAsk).
# Git dep from the DCG repo (not crates.io, not local path).
# v0.6.0-rc.1 ships the Mode + Effect + Engine + Session API;
# pack-rule evaluation lands in Phase 2.
dcg-core = { git = "https://github.com/quangdang46/destructive_command_guard", branch = "main" }

# File operations
glob = "0.3"
ignore = "0.4"           # gitignore-aware file walking
walkdir = "2"
similar = "2"            # diffing for edits

# Utilities
dirs = "5"               # home directory
anyhow = "1"
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }
libc = "0.2"             # Unix system calls (flock)
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
urlencoding = "2"        # URL encoding for web search
uuid = { version = "1", features = ["v4", "v5"] }
proctitle = "0.1"

# Embeddings (local inference) - behind feature flag (163 crates, slow to compile)
next-code-embedding = { path = "crates/next-code-embedding", optional = true }
next-code-gateway-types = { path = "crates/next-code-gateway-types" }
next-code-logging = { path = "crates/next-code-logging" }

# OAuth
base64 = "0.22"
sha2 = "0.10"
rand = "0.9.3"
hex = "0.4"
url = "2"
open = "5"               # Open URLs in browser
next-code-auth-types = { path = "crates/next-code-auth-types" }
next-code-azure-auth = { path = "crates/next-code-azure-auth" }
next-code-agent-runtime = { path = "crates/next-code-agent-runtime" }
next-code-ambient-types = { path = "crates/next-code-ambient-types" }
next-code-notify-email = { path = "crates/next-code-notify-email" }
next-code-provider-metadata = { path = "crates/next-code-provider-metadata" }
next-code-provider-core = { path = "crates/next-code-provider-core" }
next-code-provider-openai = { path = "crates/next-code-provider-openai" }
next-code-provider-openrouter = { path = "crates/next-code-provider-openrouter" }
next-code-provider-gemini = { path = "crates/next-code-provider-gemini" }
next-code-tui-markdown = { path = "crates/next-code-tui-markdown" }
next-code-tui-messages = { path = "crates/next-code-tui-messages" }
next-code-tui-core = { path = "crates/next-code-tui-core" }
next-code-tui-mermaid = { path = "crates/next-code-tui-mermaid" }
next-code-tui-account-picker = { path = "crates/next-code-tui-account-picker" }
next-code-tui-render = { path = "crates/next-code-tui-render" }
next-code-tui-session-picker = { path = "crates/next-code-tui-session-picker", features = ["serde"] }
next-code-tui-style = { path = "crates/next-code-tui-style" }
next-code-tui-tool-display = { path = "crates/next-code-tui-tool-display" }
next-code-tui-usage-overlay = { path = "crates/next-code-tui-usage-overlay" }
next-code-update-core = { path = "crates/next-code-update-core" }
next-code-terminal-launch = { path = "crates/next-code-terminal-launch" }
next-code-terminal-image = { path = "crates/next-code-terminal-image" }
next-code-tui-workspace = { path = "crates/next-code-tui-workspace" }
next-code-usage-types = { path = "crates/next-code-usage-types" }

# Streaming
tokio-stream = "0.1"
bytes = "1"

# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
arboard = "3"              # Clipboard support
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }  # Only PNG/JPEG (skip avif/rav1e, exr, gif, tiff, etc)

# Markdown & syntax highlighting
unicode-width = "0.2.2"

# PDF parsing (behind feature flag)
next-code-pdf = { path = "crates/next-code-pdf", optional = true }
next-code-background-types = { path = "crates/next-code-background-types" }
next-code-batch-types = { path = "crates/next-code-batch-types" }
next-code-build-support = { path = "crates/next-code-build-support" }
next-code-build-meta = { path = "crates/next-code-build-meta" }
# Application core: tooling, agent, dcg, dcp, etc. Re-exported via
# `pub use next_code_app_core::*` in lib.rs. default-features=false so the root
# feature set fully controls the downstream features (see [features]).
next-code-app-core = { path = "crates/next-code-app-core", default-features = false }
# Presentation layer: the terminal UI (`tui`) + offline replay (`video_export`),
# compiled as a separate rustc unit. It re-exports the application core
# (`next-code-app-core`, which re-exports `next-code-base`), so the root crate (cli +
# bin) re-exports everything via `pub use next_code_tui::*`. default-features=false
# so the root feature set fully controls the downstream features (see
# [features]).
next-code-tui = { path = "crates/next-code-tui", default-features = false }
# PR8: Face (Grok pager) as interactive UI; brain stays next-code serve via ACP bridge.
xai-grok-pager = { path = "crates/xai-grok-pager" }
xai-grok-shell = { path = "crates/xai-grok-shell" }
xai-acp-lib = { path = "crates/xai-acp-lib" }
xai-hooks-plugins-types = { path = "crates/xai-hooks-plugins-types" }
xai-grok-tools = { path = "crates/xai-grok-tools" }

agent-client-protocol = { version = "0.10.4", features = ["unstable"] }
next-code-compaction-core = { path = "crates/next-code-compaction-core" }
next-code-config-types = { path = "crates/next-code-config-types" }
next-code-core = { path = "crates/next-code-core" }
next-code-memory-types = { path = "crates/next-code-memory-types" }
next-code-message-types = { path = "crates/next-code-message-types" }
next-code-overnight-core = { path = "crates/next-code-overnight-core" }
next-code-plan = { path = "crates/next-code-plan" }
next-code-swarm-core = { path = "crates/next-code-swarm-core" }
next-code-protocol = { path = "crates/next-code-protocol" }
next-code-selfdev-types = { path = "crates/next-code-selfdev-types" }
next-code-session-types = { path = "crates/next-code-session-types" }
next-code-setup-hints = { path = "crates/next-code-setup-hints" }
next-code-storage = { path = "crates/next-code-storage" }
next-code-secrets = { path = "crates/next-code-secrets" }
next-code-task-types = { path = "crates/next-code-task-types" }
next-code-tool-core = { path = "crates/next-code-tool-core" }
next-code-tool-types = { path = "crates/next-code-tool-types" }
next-code-best-of-n = { path = "crates/next-code-best-of-n" }
next-code-side-panel-types = { path = "crates/next-code-side-panel-types" }
next-code-experiment-flags = { path = "crates/next-code-experiment-flags" }

# Archive extraction (for auto-update)
flate2 = "1"
tar = "0.4"
tempfile = "3"
qrcode = { version = "0.14.1", default-features = false }
aws-config = "1.8.16"
aws-credential-types = "1.2.14"
aws-sdk-bedrockruntime = "1.130.0"
aws-types = "1.3.15"
aws-smithy-types = "1.4.7"
aws-sdk-bedrock = "1.141.0"
aws-sdk-sts = "1.103.0"


[features]
# Include local ONNX/tokenizer embeddings in default builds so memory recall,
# semantic retrieval, and embedding-backed features work out of the box.
# Use `NEXT_CODE_DEV_FEATURE_PROFILE=minimal` for compile-speed probes that need
# to skip optional default feature stacks.
default = ["pdf", "embeddings", "dcp", "rtco", "jemalloc", "mmdr-size-api"]
dev-bins = ["next-code-tui/dev-bins"]
jemalloc = [
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-ctl",
    "dep:tikv-jemalloc-sys",
    "tikv-jemallocator/stats",
    "tikv-jemalloc-ctl/stats",
    "next-code-tui/jemalloc",
]
jemalloc-prof = [
    "jemalloc",
    "tikv-jemallocator/profiling",
    "tikv-jemalloc-ctl/profiling",
    "next-code-tui/jemalloc-prof",
]
embeddings = ["dep:next-code-embedding", "next-code-tui/embeddings"]
dcp = ["next-code-tui/dcp"]
rtco = ["next-code-tui/rtco"]
mmdr-size-api = ["next-code-tui-mermaid/mmdr-size-api"]
pdf = ["dep:next-code-pdf", "next-code-tui/pdf"]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_Console", "Win32_Globalization"] }

# Memory allocator (reduces fragmentation for long-running server). jemalloc has
# no supported native Windows/MSVC build, so it's only pulled in on other targets.
[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"], optional = true }
tikv-jemalloc-ctl = { version = "0.6", optional = true }
tikv-jemalloc-sys = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
global-hotkey = "0.7"
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSThread",
    "NSRunLoop",
    "NSDate",
    "NSTimer",
    "NSUserDefaults",
    "NSValue",
    "NSAttributedString",
    "NSDictionary",
    "block2",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSAppearance",
    "NSApplication",
    "NSResponder",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSButton",
    "NSCell",
    "NSColor",
    "NSControl",
    "NSFont",
    "NSFontDescriptor",
    "NSImage",
    "NSAttributedString",
    "NSMenu",
    "NSMenuItem",
    "NSRunningApplication",
] }

[profile.release]
opt-level = 1
debug = 0
codegen-units = 256
incremental = true

[profile.selfdev]
inherits = "release"
opt-level = 0

# Full LTO release for stable/distribution builds
[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 16
incremental = false

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 0

# Keep the idle-animation math kernels fully optimized even in debug-style
# builds. This crate is pure, dependency-free numeric code (the trig-heavy 3D
# samplers that otherwise dominate idle CPU). Pinning it to opt-level = 3 here
# means the optimized object is compiled once and reused across iterative
# dev/selfdev rebuilds, since it only recompiles when the animation code itself
# changes. The "*" glob above sets the default for dependencies; these explicit
# package entries take precedence for this one crate in each profile.
[profile.dev.package."next-code-tui-anim"]
opt-level = 3

[profile.selfdev.package."next-code-tui-anim"]
opt-level = 3

[profile.test.package."next-code-tui-anim"]
opt-level = 3

# Keep the text-shaping stack optimized even in dev/selfdev/test builds.
#
# rustybuzz + ttf-parser (+ related font crates) are used by SVG/usvg paths in
# the TUI. At opt-level = 0 they are much slower. These are stable third-party
# crates that almost never recompile, so pinning them to opt-level = 3 costs a
# one-time compile and is then reused across iterative rebuilds (same rationale
# as next-code-tui-anim above).
[profile.dev.package.rustybuzz]
opt-level = 3
[profile.selfdev.package.rustybuzz]
opt-level = 3
[profile.test.package.rustybuzz]
opt-level = 3

[profile.dev.package.ttf-parser]
opt-level = 3
[profile.selfdev.package.ttf-parser]
opt-level = 3
[profile.test.package.ttf-parser]
opt-level = 3

[profile.dev.package.fontdb]
opt-level = 3
[profile.selfdev.package.fontdb]
opt-level = 3
[profile.test.package.fontdb]
opt-level = 3

# Keep the raster image pipeline optimized in dev/selfdev/test builds.
#
# Inline transcript images decode (png/zune-jpeg/fdeflate/miniz_oxide), resize
# (image), and base64-encode (kitty transmit) at draw time; at opt-level 0 a
# single screenshot costs 100-200ms per decode/resize, which reads as input
# lag. These are pure pixel crates with no next-code logic, so optimizing them
# does not hurt rebuild times for our own code.
[profile.dev.package.image]
opt-level = 3
[profile.selfdev.package.image]
opt-level = 3
[profile.test.package.image]
opt-level = 3

[profile.dev.package.png]
opt-level = 3
[profile.selfdev.package.png]
opt-level = 3
[profile.test.package.png]
opt-level = 3

[profile.dev.package.zune-jpeg]
opt-level = 3
[profile.selfdev.package.zune-jpeg]
opt-level = 3
[profile.test.package.zune-jpeg]
opt-level = 3

[profile.dev.package.fdeflate]
opt-level = 3
[profile.selfdev.package.fdeflate]
opt-level = 3
[profile.test.package.fdeflate]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3
[profile.selfdev.package.miniz_oxide]
opt-level = 3
[profile.test.package.miniz_oxide]
opt-level = 3

[profile.dev.package.base64]
opt-level = 3
[profile.selfdev.package.base64]
opt-level = 3
[profile.test.package.base64]
opt-level = 3

[profile.test]
debug = 0
incremental = true
codegen-units = 256

[dev-dependencies]
async-stream = "0.3"
# Enables the downstream test-support helpers (storage::lock_test_env,
# auth::test_sandbox, bus::reset_models_updated_publish_state_for_tests, the
# ExternalAuthReviewCandidate read accessors) for the root crate's own cli test
# target. Feature unification applies this only to test/bench/example builds,
# never to a normal `cargo build`/release binary.
next-code-tui = { path = "crates/next-code-tui", features = ["test-support"] }

[build-dependencies]
