[package]
name = "jcode-agent-runtime"
version = "0.1.0"
edition = "2024"

[lib]
name = "jcode_agent_runtime"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
