[package]
name = "jcode-beads-bridge"
version = "0.1.0"
edition = "2024"
description = "Adapter crate wrapping beads_rust for jcode integration"

[dependencies]
beads_rust.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
